# leanp2p

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  library.cpp  library.h  vcpkg-configuration.json  vcpkg-toolchain.cmake  vcpkg.json
.ci/: .env
.ci/scripts/: init.sh
.github/workflows/: build_and_test.yaml
cmake/: functions.cmake  install.cmake
example/: CMakeLists.txt
example/00-vcpkg-install/: CMakeLists.txt  README.md  main.cpp  vcpkg-configuration.json  vcpkg.json
example/00-vcpkg-install/vcpkg-overlay/leanp2p/: portfile.cmake
example/01-echo/: CMakeLists.txt  README.md  libp2p_echo_client.cpp  libp2p_echo_client.zig  libp2p_echo_client_c.c  libp2p_echo_server.cpp  libp2p_echo_server.zig  libp2p_echo_server_c.c
example/03-gossip/: CMakeLists.txt  README.md  gossip_anonymous_example.cpp  gossip_chat_example.cpp
include/libp2p/basic/: encode_varint.hpp  poll.hpp  read.hpp  read_buffer.hpp  read_varint.hpp  reader.hpp  write.hpp  write_varint.hpp  writer.hpp
include/libp2p/c/: libp2p_c.h
include/libp2p/common/: protobuf.hpp  sample_peer.hpp  saturating.hpp  std_format_as.hpp  weak_macro.hpp
include/libp2p/connection/: capable_connection.hpp  on_datagram.hpp  secure_connection.hpp  stream.hpp  stream_and_protocol.hpp
include/libp2p/coro/: asio.hpp  channel.hpp  coro.hpp  handler.hpp  spawn.hpp  timer_loop.hpp  yield.hpp
include/libp2p/crypto/: key_marshaller.hpp  secp256k1_provider.hpp  secp256k1_types.hpp
include/libp2p/crypto/secp256k1_provider/: secp256k1_provider_impl.hpp
include/libp2p/crypto/sha/: keccak.hpp
include/libp2p/event/: bus.hpp
include/libp2p/host/: basic_host.hpp
include/libp2p/injector/: host_injector.hpp  network_injector.hpp
include/libp2p/log/: simple.hpp
include/libp2p/multi/: multiaddress.hpp  multicodec_type.hpp  multihash.hpp  uvarint.hpp
include/libp2p/network/: connection_manager.hpp  dialer.hpp  listener_manager.hpp  transport_manager.hpp
include/libp2p/outcome/: outcome.hpp
include/libp2p/peer/: address_repository.hpp  identity_manager.hpp  peer_id.hpp  peer_repository.hpp  rtt_repository.hpp  user_agent_repository.hpp
include/libp2p/peer/address_repository/: inmem_address_repository.hpp
include/libp2p/peer/rtt_repository/: inmem_rtt_repository.hpp
include/libp2p/peer/user_agent_repository/: inmem_user_agent_repository.hpp
include/libp2p/protocol/: base_protocol.hpp  identify.hpp  ping.hpp
include/libp2p/protocol/echo/: echo.hpp  echo_config.hpp
include/libp2p/protocol/gossip/: config.hpp  gossip.hpp  score.hpp  time_cache.hpp
include/libp2p/protocol_muxer/: multiselect.hpp  protocol_muxer.hpp
include/libp2p/protocol_muxer/multiselect/: multiselect_instance.hpp
include/libp2p/security/tls/: ssl_context.hpp
include/libp2p/transport/: transport_adaptor.hpp  transport_listener.hpp
include/libp2p/transport/quic/: connection.hpp  engine.hpp  error.hpp  listener.hpp  stream.hpp  transport.hpp
include/libp2p/transport/tcp/: tcp_util.hpp
include/qtils/: retain_if.hpp
rust-gossip/: Cargo.toml
rust-gossip/src/: main.rs  stdio.rs
src/: CMakeLists.txt
src/basic/: CMakeLists.txt  read_buffer.cpp
src/c/: CMakeLists.txt  libp2p_c.cpp
src/common/: CMakeLists.txt  literals.cpp
src/crypto/: CMakeLists.txt  key_marshaller.cpp
src/crypto/aes_provider/: CMakeLists.txt  aes_ctr_impl.cpp
src/crypto/crypto_provider/: CMakeLists.txt  crypto_provider_impl.cpp
src/crypto/ecdsa_provider/: CMakeLists.txt
src/crypto/ed25519_provider/: CMakeLists.txt
src/crypto/hmac_provider/: CMakeLists.txt
src/crypto/key_marshaller/: CMakeLists.txt
src/crypto/key_validator/: CMakeLists.txt
src/crypto/random_generator/: CMakeLists.txt
src/crypto/rsa_provider/: CMakeLists.txt
src/crypto/secp256k1_provider/: CMakeLists.txt  secp256k1_provider_impl.cpp
src/crypto/sha/: CMakeLists.txt  keccak.cpp
src/host/: CMakeLists.txt  basic_host.cpp
src/log/: CMakeLists.txt
src/multi/: CMakeLists.txt  content_identifier_codec.cpp  multiaddress.cpp  multihash.cpp  uvarint.cpp
src/multi/converters/: CMakeLists.txt
src/multi/multibase_codec/: CMakeLists.txt  multibase_codec_impl.cpp
src/multi/multibase_codec/codecs/: base16.cpp  base58.cpp  base64.cpp
src/network/: CMakeLists.txt  connection_manager.cpp  dialer.cpp  listener_manager.cpp  transport_manager.cpp
src/peer/: CMakeLists.txt  identity_manager.cpp  peer_id.cpp  peer_repository.cpp
src/peer/address_repository/: CMakeLists.txt  inmem_address_repository.cpp
src/peer/key_repository/: CMakeLists.txt
src/peer/protocol_repository/: CMakeLists.txt
src/peer/rtt_repository/: CMakeLists.txt  inmem_rtt_repository.cpp
src/peer/user_agent_repository/: CMakeLists.txt  inmem_user_agent_repository.cpp
src/protocol/: CMakeLists.txt  ping.cpp
src/protocol/echo/: CMakeLists.txt  echo.cpp
src/protocol/gossip/: CMakeLists.txt  gossip.cpp  gossip.proto
src/protocol/identify/: CMakeLists.txt  identify.cpp  identify.proto
src/protocol_muxer/: CMakeLists.txt  multiselect.cpp
src/protocol_muxer/multiselect/: multiselect_instance.cpp
src/security/: CMakeLists.txt
src/security/tls/: CMakeLists.txt  ssl_context.cpp  tls_details.cpp
src/tls/: CMakeLists.txt
src/transport/: CMakeLists.txt
src/transport/quic/: CMakeLists.txt  connection.cpp  engine.cpp  listener.cpp  stream.cpp  transport.cpp
test-plans/: CMakeLists.txt  common.cpp  common.hpp
test-plans/ping/: CMakeLists.txt  Dockerfile  ping.cpp
test-plans/transport_interop/: CMakeLists.txt  Dockerfile  test_plans_ping.cpp
vcpkg-overlay/qtils/: portfile.cmake
vcpkg-overlay/soralog/: portfile.cmake
