cmake_minimum_required(VERSION 3.25)
project(leanp2p)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Boost CONFIG REQUIRED filesystem random beast program_options)
find_package(OpenSSL CONFIG REQUIRED)
find_package(soralog CONFIG REQUIRED)
find_package(fmt CONFIG REQUIRED)
find_package(yaml-cpp CONFIG REQUIRED)
find_package(lsquic CONFIG REQUIRED)
find_package(ZLIB REQUIRED)
find_package(libsecp256k1 CONFIG REQUIRED)
find_package(Protobuf CONFIG REQUIRED)
find_package(tsl_hat_trie CONFIG REQUIRED)
find_package(Boost.DI CONFIG REQUIRED)

include(cmake/functions.cmake)
include(cmake/install.cmake)

# Set global include directory
include_directories(include)

# Add subdirectories to collect source files
add_subdirectory(src)

# Examples
add_subdirectory(example)

libp2p_install(libp2p)

libp2p_install(p2p_varint_prefix_reader)
libp2p_install(p2p_read_buffer)
libp2p_install(p2p_byteutil)
libp2p_install(p2p_literals)
libp2p_install(p2p_crypto_error)
libp2p_install(p2p_crypto_key)
libp2p_install(p2p_crypto_common)
libp2p_install(p2p_key_marshaller)
libp2p_install(p2p_aes_provider)
libp2p_install(p2p_crypto_provider)
libp2p_install(p2p_ecdsa_provider)
libp2p_install(p2p_ed25519_provider)
libp2p_install(p2p_hmac_provider)
libp2p_install(p2p_key_validator)
libp2p_install(p2p_random_generator)
libp2p_install(p2p_rsa_provider)
libp2p_install(p2p_secp256k1_provider)
libp2p_install(p2p_sha)
libp2p_install(p2p_basic_host)
libp2p_install(p2p_logger)
libp2p_install(p2p_uvarint)
libp2p_install(p2p_multihash)
libp2p_install(p2p_multiaddress)
libp2p_install(p2p_cid)
libp2p_install(p2p_converters)
libp2p_install(p2p_multibase_codec)
libp2p_install(p2p_connection_manager)
libp2p_install(p2p_transport_manager)
libp2p_install(p2p_listener_manager)
libp2p_install(p2p_dialer)
libp2p_install(p2p_peer_errors)
libp2p_install(p2p_peer_id)
libp2p_install(p2p_peer_address)
libp2p_install(p2p_identity_manager)
libp2p_install(p2p_peer_repository)
libp2p_install(p2p_inmem_address_repository)
libp2p_install(p2p_inmem_key_repository)
libp2p_install(p2p_inmem_protocol_repository)
libp2p_install(p2p_protocol_echo)
libp2p_install(p2p_multiselect)
libp2p_install(p2p_tls)
libp2p_install(p2p_quic)
