# src/CMakeLists.txt

# Add subdirectories to collect source files
add_subdirectory(basic)
add_subdirectory(c)
add_subdirectory(common)
add_subdirectory(crypto)
add_subdirectory(host)
add_subdirectory(log)
add_subdirectory(multi)
add_subdirectory(network)
add_subdirectory(peer)
add_subdirectory(protocol)
add_subdirectory(protocol_muxer)
add_subdirectory(security)
add_subdirectory(transport)
